Port to react-jenny for easier development

--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "oscillator",
   "version": "1.0.0",
   "main": "",
-  "dependencies": {},
+  "dependencies": {
+    "prop-types": "^15.5.10",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-jenny": "^1.0.0"
+  },
   "devDependencies": {
-    "jenny-js": "^1.0.3",
     "pre-req": "^1.4.3"
   },
   "scripts": {
